tried to do something. have a simple validation on arguments. still no picture drawn, have no leaks. need to change EVERYTHING

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -82,6 +82,7 @@ SRC_FILES =	ft_putchar.c \
 			ft_atol_base.c \
 			ft_count_words.c \
 			ft_strtolower.c \
+			vz_ft_free.c
 
 OBJ = $(SRC_FILES:.c=.o)
 
